# py-iso3901

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: codeql.yml  format.yml  format_inc.yml  full_check_inc.yml  publish.yml  push_pr.yml  tox.yml  tox_inc.yml  typecheck.yml  typecheck_inc.yml
iso3901/: __init__.py  isrc.py
tests/: test_allocation.py  test_isrc_props.py  test_parse.py
