[build-system]
requires = ["flit_core ~=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "iso3901"
authors = [{name = "Abel Cheung", email = "abelcheung@gmail.com"}]
dynamic = ["version", "description"]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio",
    "Typing :: Typed",
]
requires-python = ">=3.7"
dependencies = [
    "iso3166"
]

[project.optional-dependencies]
dev = [
    'tox ~= 4.0',
    'pytest',
    'pyright',
    'mypy ~= 1.0',
]

[project.urls]
Home = "https://github.com/Tagger-phile/py-iso3901"

[tool.pytest.ini_options]
testpaths = ['tests']

[tool.pyright]
include = ['iso3901']

[tool.mypy]
packages = 'iso3901'
strict = true
show_error_context = true
pretty = true

[tool.isort]
profile = 'black'
combine_as_imports = true
include_trailing_comma = true
skip_glob = [".*", "tests/*"]
